                                                        -*- coding: utf-8 -*-
Changes with Apache 2.3.0
  [Remove entries to the current 2.0 and 2.2 section below, when backported]

  *) mod_cache: Correctly cache objects whose URL query string has been
     modified by mod_rewrite. PR 40805. [Ruediger Pluem]

  *) mod_proxy: Add a missing assignment in an error checking code path.
     PR 40865. [Andrew Rucker Jones <arjones simultan.dyndns.org>]

  *) mod_mem_cache: Increase the minimum and default value for
     MCacheMinObjectSize from 0 to 1, as a MCacheMinObjectSize of 0 does not
     make sense and leads to a division by zero.  PR 40576.
     [Xuekun Hu <xuekun.hu gmail.com>]

  *) mod_cache: Pass the output filter stack through the store_body()
     hook, giving each cache backend the ability to make a better
     decision as to how it will allocate the tasks of writing to the
     cache and writing to the network. Previously the write to the
     cache task needed to be complete before the same brigade was
     written to the network, and this caused timing and memory issues
     on large cached files. This fix replaces the previous fix for this
     PR below. PR39380 [Graham Leggett]

  *) Fix issue which could cause error messages to be written to access logs
     on Win32.  PR 40476.  [Tom Donovan <Tom.Donovan acm.org>]

  *) The LockFile directive, which specifies the location of
     the accept() mutex lockfile, is depreciated. Instead, the
     AcceptMutex directive now takes an optional lockfile
     location parameter, ala SSLMutex. [Jim Jagielski]

  *) Fix address-in-use startup failure caused by corruption of the list of
     listen sockets in some configurations with multiple generic Listen
     directives.  [Jeff Trawick]

  *) mod_authn_dbd: Export any additional columns queried in the SQL select
     into the environment with the name AUTHENTICATE_<COLUMN>. This brings